k8s/namespaces/falcosidekick/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falcosidekick
  namespace: falcosidekick
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco
spec:
  type: NodePort
  ports:
  - port: 2801
    targetPort: 2801
  selector:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco
