k8s/namespaces/falcosidekick/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falcosidekick
  namespace: falcosidekick
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco
spec:
  tls:
  - hosts:
    - falcosidekick.home.pulsifer.ca
    secretName: falcosidekick-tls
  rules:
  - host: "falcosidekick.home.pulsifer.ca"
    http:
      paths:
      - path: /
        backend:
          service:
            name: falcosidekick
            port:
              number: 2801
              protocol: TCP
  defaultBackend:
    service:
      name: falcosidekick
      port:
        number: 2801
        protocol: TCP
