k8s/namespaces/falcosidekick/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: falcosidekick
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: falcosidekick
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
