k8s/namespaces/falcosidekick/01-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: falcosidekick
  namespace: falcosidekick
  labels:
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falco
spec:
  egress:
  - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: falco
    ports:
    - port: 2801
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: falco
      app.kubernetes.io/part-of: falco
  policyTypes:
  - Ingress
  - Egress
